# fastripgrep

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LAUNCH_POSTS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.rsgrep/: CURRENT
.rsgrep/generations/1774323903/: meta.json
Formula/: frg.rb
benches/: bench.rs
docs/superpowers/plans/: 2026-03-24-rsgrep-implementation.md
docs/superpowers/specs/: 2026-03-24-rsgrep-design.md
scripts/: generate_weights.rs
skills/: frg-replace.md  frg-search.md  frg.md
skills/frg-replace/: SKILL.md
skills/frg-search/: SKILL.md
src/: cli.rs  ignore.rs  lib.rs  main.rs
src/index/: filetable.rs  lookup.rs  meta.rs  mod.rs  ngram.rs  postings.rs
src/output/: color.rs  mod.rs
src/search/: decompose.rs  intersect.rs  mod.rs  replace.rs  verify.rs
tests/: integration.rs  property_tests.proptest-regressions  property_tests.rs  replace_cli.rs
